core/testData/annotator/perl/unreachableCode/exitFromInnerMethod.code
sub somesub{
    'before';
    method Exit {
        'inner before';
        exit;
        '<error descr="Unreachable code">inner after</error>';
    }
    'after';
    method preload {
        'inner before';
        exit;
    }
    'after';
}
